--- a/templates/home.html
+++ b/templates/home.html
@@ -47,6 +47,10 @@
         <td>
             <input type="text" name="sender_name">
         </td>
+        <td>Receiver name:</td>
+        <td>
+            <input type="text" name="reciever_name">
+        </td>
         <br>
         <input type="submit" value="Update">
     </form>
